--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -550,129 +550,6 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/whydypcet"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_row="0"
-                        android:layout_column="1"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        android:layout_gravity="fill"
-                        android:background="@color/white"
-                        app:cardBackgroundColor="@color/white"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="1dp"
-                        app:cardUseCompatPadding="true">
-                        <LinearLayout
-                            android:layout_width="90dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical|center_horizontal"
-                            android:gravity="center"
-                            android:orientation="vertical">
-                            <ImageView
-                                android:layout_marginBottom="4dp"
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                app:srcCompat="@drawable/whydypcet">
-                            </ImageView>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/lora"
-                                android:text="Campus Life"
-                                android:textColor="@color/black"
-                                android:textStyle="bold"
-                                android:textSize="14dp"
-                                android:textAlignment="center">
-                            </TextView>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/facility"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_row="0"
-                        android:layout_column="2"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        android:layout_gravity="fill"
-                        android:background="@color/white"
-                        app:cardBackgroundColor="@color/white"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="1dp"
-                        app:cardUseCompatPadding="true">
-                        <LinearLayout
-                            android:layout_width="90dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical|center_horizontal"
-                            android:gravity="center"
-                            android:orientation="vertical">
-                            <ImageView
-                                android:layout_marginBottom="4dp"
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                app:srcCompat="@drawable/facilities">
-                            </ImageView>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Facility"
-                                android:fontFamily="@font/lora"
-                                android:textColor="@color/black"
-                                android:textStyle="bold"
-                                android:textSize="14dp"
-                                android:textAlignment="center">
-                            </TextView>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-                </GridLayout>
-
-                <GridLayout
-                    android:id="@+id/home3"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:rowCount="1">
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/buscard"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_row="0"
-                        android:layout_column="0"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        android:layout_gravity="fill"
-                        android:background="@color/white"
-                        app:cardBackgroundColor="@color/white"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="1dp"
-                        app:cardUseCompatPadding="true">
-                        <LinearLayout
-                            android:layout_width="90dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical|center_horizontal"
-                            android:gravity="center"
-                            android:orientation="vertical">
-                            <ImageView
-                                android:layout_marginBottom="4dp"
-                                android:layout_width="40sp"
-                                android:layout_height="40dp"
-                                app:srcCompat="@drawable/bus">
-                            </ImageView>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Bus"
-                                android:fontFamily="@font/lora"
-                                android:textColor="@color/black"
-                                android:textStyle="bold"
-                                android:textSize="14dp"
-                                android:textAlignment="center">
-                            </TextView>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
                         android:id="@+id/course"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -741,6 +618,129 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Placement"
+                                android:fontFamily="@font/lora"
+                                android:textColor="@color/black"
+                                android:textStyle="bold"
+                                android:textSize="14dp"
+                                android:textAlignment="center">
+                            </TextView>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </GridLayout>
+
+                <GridLayout
+                    android:id="@+id/home3"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:rowCount="1">
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/buscard"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_row="0"
+                        android:layout_column="0"
+                        android:layout_rowWeight="1"
+                        android:layout_columnWeight="1"
+                        android:layout_gravity="fill"
+                        android:background="@color/white"
+                        app:cardBackgroundColor="@color/white"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="1dp"
+                        app:cardUseCompatPadding="true">
+                        <LinearLayout
+                            android:layout_width="90dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical|center_horizontal"
+                            android:gravity="center"
+                            android:orientation="vertical">
+                            <ImageView
+                                android:layout_marginBottom="4dp"
+                                android:layout_width="40sp"
+                                android:layout_height="40dp"
+                                app:srcCompat="@drawable/bus">
+                            </ImageView>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Bus"
+                                android:fontFamily="@font/lora"
+                                android:textColor="@color/black"
+                                android:textStyle="bold"
+                                android:textSize="14dp"
+                                android:textAlignment="center">
+                            </TextView>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/whydypcet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_row="0"
+                        android:layout_column="1"
+                        android:layout_rowWeight="1"
+                        android:layout_columnWeight="1"
+                        android:layout_gravity="fill"
+                        android:background="@color/white"
+                        app:cardBackgroundColor="@color/white"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="1dp"
+                        app:cardUseCompatPadding="true">
+                        <LinearLayout
+                            android:layout_width="90dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical|center_horizontal"
+                            android:gravity="center"
+                            android:orientation="vertical">
+                            <ImageView
+                                android:layout_marginBottom="4dp"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                app:srcCompat="@drawable/whydypcet">
+                            </ImageView>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/lora"
+                                android:text="Campus Life"
+                                android:textColor="@color/black"
+                                android:textStyle="bold"
+                                android:textSize="14dp"
+                                android:textAlignment="center">
+                            </TextView>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/facility"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_row="0"
+                        android:layout_column="2"
+                        android:layout_rowWeight="1"
+                        android:layout_columnWeight="1"
+                        android:layout_gravity="fill"
+                        android:background="@color/white"
+                        app:cardBackgroundColor="@color/white"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="1dp"
+                        app:cardUseCompatPadding="true">
+                        <LinearLayout
+                            android:layout_width="90dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical|center_horizontal"
+                            android:gravity="center"
+                            android:orientation="vertical">
+                            <ImageView
+                                android:layout_marginBottom="4dp"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                app:srcCompat="@drawable/facilities">
+                            </ImageView>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Facility"
                                 android:fontFamily="@font/lora"
                                 android:textColor="@color/black"
                                 android:textStyle="bold"
@@ -916,13 +916,11 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.49"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-                app:layout_constraintVertical_bias="0.049"
                 app:cardCornerRadius="10dp"
                 android:layout_marginTop="30dp"
-                app:cardBackgroundColor="@color/white">
+                app:cardBackgroundColor="@color/nevi_1">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -930,7 +928,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:textColor="@color/nevi_1"
+                    android:textColor="@color/white"
                     android:gravity="center"
                     android:fontFamily="@font/lora"
                     android:layout_gravity="center_horizontal"
@@ -942,7 +940,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1.5dp"
                         android:layout_gravity="center_horizontal"
-                        android:background="@color/black">
+                        android:background="@color/hint">
                     </View>
                 <TextView
                     android:layout_width="match_parent"
@@ -950,7 +948,7 @@
                     android:padding="3dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginStart="20dp"
-                    android:textColor="@color/nevi_1"
+                    android:textColor="@color/white"
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
                     android:fontFamily="@font/lora"
@@ -960,7 +958,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/nevi_1"
+                    android:textColor="@color/white"
                     android:gravity="center"
                     android:layout_marginBottom="2dp"
                     android:layout_gravity="center_horizontal"
@@ -972,12 +970,12 @@
                     android:layout_width="300dp"
                     android:layout_height="1dp"
                     android:layout_gravity="center_horizontal"
-                    android:background="@color/black">
+                    android:background="@color/hint">
                 </View>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/nevi_1"
+                    android:textColor="@color/white"
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
                     android:fontFamily="@font/lora"
@@ -988,7 +986,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:textColor="@color/nevi_1"
+                    android:textColor="@color/white"
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
                     android:fontFamily="@font/lora"
@@ -1000,7 +998,7 @@
                     android:id="@+id/visit"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:textColor="@color/nevi_1"
+                    android:textColor="@color/white"
                     android:gravity="center"
                     android:fontFamily="@font/lora"
                     android:layout_marginTop="10dp"
@@ -1013,7 +1011,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/nevi_1"
+                    android:textColor="@color/white"
                     android:gravity="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
@@ -1028,7 +1026,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_height="2dp"
                     android:layout_gravity="center_horizontal"
-                    android:background="@color/black"
+                    android:background="@color/hint"
                     android:layout_marginBottom="10dp">
                 </View>
 
